@@ -11,7 +11,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 # 
-# RCS: @(#) $Id: tk.decls,v 1.27 2005/05/27 23:14:28 dkf Exp $
+# RCS: @(#) $Id: tk.decls,v 1.28 2006/02/09 19:08:51 das Exp $
 
 library tk
 
@@ -1338,7 +1338,7 @@ declare 5 aqua {
 }
 
 declare 6 aqua {
-    void TkMacOSXInvalClipRgns (TkWindow *winPtr)
+    void TkMacOSXInvalClipRgns (Tk_Window tkwin)
 }
 
 declare 7 aqua {
